# laplacian

./: .gitignore  LICENSE.txt  README.md  README.rst  TODO.md  pyproject.toml  requirements.txt  run_debug.ipynb
examples/: eigen_2d.ipynb  eigen_3d.ipynb  eigen_3d_sr.ipynb  eigenvalues.py  eigenvalues_comp.py  eigenvalues_comp_plot.ipynb  eigenvalues_timer.py  halfmoon.ipynb  hermite.ipynb  mnist.ipynb  one_dimension.ipynb  spherical_harmonics.ipynb  swiss_roll.ipynb  three_dimension.ipynb  two_dimension.ipynb
grid/: grid_res.ipynb  run.py  slurm_laucher.sh
notebooks/: laplacian.ipynb  one_dimension.ipynb  sphere_minimal.ipynb  two_dimension.ipynb
scripts/: halfmoons.py
src/klap/: __init__.py  kernels.py
src/klap/datasets/: __init__.py  ground_truth.py  helper.py  synthetic.py
src/klap/kernels/: __init__.py  distance_kernel.py  dot_product_kernel.py  exponential.py  gaussian.py  gaussian_fast.py  helper.py  kernel_laplacian.py  polynomial.py
src/klap/utils/: __init__.py  config.py  io.py
src/pssl/: __init__.py  config.py  loss.py
src/pssl/architecture/: __init__.py  mlp.py
src/pssl/auxillary/: __init__.py  initialization.py  linalg.py  optimization.py  plots.py
src/pssl/datasets/: __init__.py  halfmoon.py
templates/: bash_script.sh
test/: test.py
