[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klap"
version = "0.0.3"
authors = [
  { name="Vivien Cabannes", email="vivien.cabannes@gmail.com" },
]
description = "Fast implementation of (continuous) Laplacian spectral embedding."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba",
    "numpy",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/VivienCabannes/laplacian"
"Bug Tracker" = "https://github.com/VivienCabannes/laplacian/issues"